Restore the \fixmelogo default author

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1544,10 +1544,10 @@
 %                 versions)\\
 %                 And we use it to create the user-level interface:
 %    \begin{macrocode}
-\@fxnewnotemacro{fx}{note}{FX}
-\@fxnewnotemacro{fx}{warning}{FY}
-\@fxnewnotemacro{fx}{error}{FZ}
-\@fxnewnotemacro{fx}{fatal}{FT}
+\@fxnewnotemacro{fx}{note}{\fixmelogo}
+\@fxnewnotemacro{fx}{warning}{\fixmelogo}
+\@fxnewnotemacro{fx}{error}{\fixmelogo}
+\@fxnewnotemacro{fx}{fatal}{\fixmelogo}
 
 %    \end{macrocode}
 %               \end{macro}
