--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1512,6 +1512,7 @@
 % \end{macro}
 % \begin{macro}{\@fxsnote}
 %   \marg{type}\oarg{options}\marg{note}\marg{text}\\
+%   Note the \texttt{contentslayout} family here.
 %    \begin{macrocode}
 \long\def\@fxsnote#1[#2]#3#4{%
   \begingroup%
