--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1366,7 +1366,7 @@
 %  \end{macro}
 % \end{macro}
 %
-% \subsubsection{Logging options}
+% \subsubsection{Logging control}
 % \begin{option}{silent}
 %   \begin{option}{nosilent}
 %     \mbox{}
@@ -1523,7 +1523,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \subsubsubsection{User-level interface generation}
+% \subsubsection{User-level interface generation}
 % \begin{macro}{\@fxnewnotemacro}
 %   \marg{prefix}\marg{type}\marg{author}\\
 %   This macro defines the user-level interface:
