--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1369,7 +1369,7 @@
 % \subsubsection{Logging control}
 % \begin{option}{silent}
 %   \begin{option}{nosilent}
-%     \mbox{}
+%     Whether to log \fixme notes:
 %    \begin{macrocode}
 \@fxdefineboolkey{log}{silent}
 
