Set default author to 'fixme'

--- a/fixme.dtx
+++ b/fixme.dtx
@@ -1988,6 +1988,7 @@
   english,%
   nosilent,%
   area=thepage,%
+  author=fixme,%
   layout=margin,%
   innerlayout={layout=inline},%
   contentslayout=italics,%
